--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ server:
 
 spring:
     datasource:
-        url: jdbc:mysql://localhost:3306/A0001?&createDatabaseIfNotExist=true
+        url: jdbc:mysql://localhost:3306/bootdb?&createDatabaseIfNotExist=true
         username: root
         password: root
     jpa:
